# AES-GCM-512

./: CMakeLists.txt  LICENSE  Makefile  README.md  aes.c  aes.h  aesgcm.go  aesgcm_test.go  build_with_gcc.sh  cflags_128.go  cflags_192.go  cflags_256.go  cflags_512.go  go.mod  test_c_standalone.c
test_package/: CMakeLists.txt
